examples/openjml-userguide/examples/missingfieldrep4/RAC.out
Demo.java:2: error: JML model field does not have a representation: modelField
  //@ model public int modelField;
                       ^
1 error
